--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass-chokidar": "^1.3.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
