--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@storybook/addon-knobs": "^5.0.3",
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.9.0",
+    "expect": "^24.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
@@ -46,11 +48,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/react": "^5.0.3",
+    "@babel/core": "^7.3.4",
     "@storybook/addon-actions": "^5.0.3",
     "@storybook/addon-links": "^5.0.3",
     "@storybook/addons": "^5.0.3",
-    "@babel/core": "^7.3.4",
-    "babel-loader": "^8.0.5"
+    "@storybook/react": "^5.0.3",
+    "babel-loader": "^8.0.5",
+    "storybook-addon-specifications": "^2.1.2"
   }
 }
