--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css,scss}\"",
+    "lint": "eslint src",
+    "lint-fix": "yarn lint --fix",
     "storybook": "npm run build-css && start-storybook -p 9000 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -55,6 +58,16 @@
     "@storybook/addons": "^5.0.3",
     "@storybook/react": "^5.0.3",
     "babel-loader": "^8.0.5",
-    "storybook-addon-specifications": "^2.1.2"
-  }
+    "storybook-addon-specifications": "^2.1.2",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.2",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.4"
+  },
+  "eslintIgnore": [
+    "packages/"
+  ]
 }
