--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "shopping-cart",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.15.3"
+  },
   "private": true,
   "dependencies": {
     "@storybook/addon-knobs": "^5.0.3",
