--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
   },
   "private": true,
   "dependencies": {
-    "@storybook/addon-knobs": "^5.0.3",
+    "@storybook/addon-knobs": "^5.2.1",
     "bootstrap": "^4.3.1",
-    "enzyme": "^3.9.0",
-    "expect": "^24.5.0",
+    "enzyme": "^3.10.0",
+    "expect": "^24.9.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.11.0",
-    "node-sass-chokidar": "^1.3.4",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
+    "react": "^16.9.0",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-chromatic": "^0.8.4",
-    "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^4.4.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.2",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "require-context.macro": "^1.0.4",
-    "storybook": "^1.0.0",
-    "typescript": "^3.3.3333"
+    "require-context.macro": "^1.2.1",
+    "storybook": "^5.1.11",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path src src/styles/global/index.scss public/global/shopping-cart/css/index.css --output-style compressed",
@@ -55,21 +55,21 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-console": "^1.1.0",
-    "@storybook/addon-links": "^5.0.3",
-    "@storybook/addons": "^5.0.3",
-    "@storybook/react": "^5.0.3",
-    "babel-loader": "^8.0.5",
-    "storybook-addon-specifications": "^2.1.2",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.15.2",
+    "@babel/core": "^7.6.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "eslint": "^6.4.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2",
+    "storybook-addon-specifications": "^2.1.5"
   },
   "eslintIgnore": [
     "packages/"
